<resources>
    <string name="app_name">Pic</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="please_enter_a_valid_email">Please enter a valid email</string>
    <string name="feed">Feed</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>
    <string name="topics">Topics</string>
    <string name="username">Username</string>
    <string name="views">Views</string>
    <string name="downloads">Downloads</string>
    <string name="publish_date">Publish Date</string>
    <string name="camera">Camera</string>
    <string name="_156_084">156,084</string>
    <string name="_8_days_ago">8 days ago</string>
    <string name="_15_284">15,284</string>
    <string name="camera_model">SONY, ILCE-7M2</string>
    <string name="likes">Likes</string>
    <string name="bio">Things we love: 🍞 Crispbread (naturally) 🌍 Our planet 😋 Delicious food, everyday</string>
    <string name="current_event">Current Event</string>
    <string name="current_events">Current Events</string>
    <string name="topic_des">Covering the latest important events, news-worthy moments and movements from around the world — from political protests to cultural celebrations. When submitting, please provide a photo description so we understand the full context of the image</string>
    <string name="search_text">Search Text</string>
    <string name="photos">Photos</string>
    <string name="users">Users</string>
    <string name="home">Home</string>
    <string name="first_name">First Name</string>
    <string name="ali">Ali</string>
    <string name="password">Password</string>
    <string name="stars">********</string>
    <string name="test_gmail_com">test@gmail.com</string>
    <string name="confirm">Confirm</string>
    <string name="accept">Accept</string>
    <string name="preference_file_key">email</string>
    <string name="logout">Logout</string>
    <string name="logout_message">Do you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="last_name">Last Name</string>
    <string name="error_connection_message">Check your Internet connection and try again.</string>
    <string name="error_connection_message2">We couldnt make connection, check your network </string>
    <string name="dismiss">Dismiss</string>
</resources>