<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:shapeAppearanceOverlay="@style/MaterialCardView16Dp"
    >

    <LinearLayout
        android:orientation="vertical"

        android:layout_width="match_parent"
        android:paddingRight="16dp"
        android:paddingLeft="16dp"
        android:paddingBottom="24dp"
        android:layout_height="wrap_content">


        <ImageView
            android:layout_width="32dp"
            android:layout_height="4dp"
            android:src="@drawable/shape_top_bottom_sheet"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"/>

        <LinearLayout
            android:id="@+id/single_item_in_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="vertical">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_bottom_sheet"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="46dp"
                android:hint="@string/first_name"
                app:hintTextColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:imeOptions="actionNext"
                    android:maxLines="1"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/two_item_in_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/pass_profile_til"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="46dp"
                android:hint="@string/password"
                app:hintTextColor="@color/black"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:imeOptions="actionNext"
                    android:maxLines="1"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/confirm_pass_profile_til"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="26dp"
                android:hint="@string/confirm"
                app:hintTextColor="@color/black"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btn_submit_bottom_sheet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/accept"
            android:textColor="@color/white"
            app:backgroundTint="@null"
            android:background="@drawable/btn_shape_selected"
            android:layout_marginBottom="8dp"
            android:textAllCaps="false"/>

        <LinearLayout
            android:id="@+id/logout_layout"
            android:visibility="gone"
            android:layout_marginTop="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logout_message"
                android:textColor="@color/dark_800"
                android:textSize="16sp"/>

            <LinearLayout
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                >

                <Button
                    android:id="@+id/btn_logout_yes"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_marginEnd="8dp"
                    android:layout_height="wrap_content"
                    android:text="@string/yes"
                    android:textColor="@color/primary_500"
                    app:backgroundTint="@null"
                    android:background="@drawable/button_logout"
                    android:textAllCaps="false"/>

                <Button
                    android:id="@+id/byn_logout_no"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@string/no"
                    android:textColor="@color/primary_500"
                    app:backgroundTint="@null"
                    android:background="@drawable/button_logout"
                    android:textAllCaps="false"/>

            </LinearLayout>

        </LinearLayout>



    </LinearLayout>

</com.google.android.material.card.MaterialCardView>
