<?xml version="1.0" encoding="utf-8"?>
<layout>



    <RelativeLayout
        android:id="@+id/login_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.LoginActivity">


        <LinearLayout
            android:id="@+id/linear_login_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/img_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_unsplash_wordmark_logo_1"/>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_login_til"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="58dp"
                app:hintTextColor="@color/black"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxStrokeErrorColor="@color/primary_500"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                android:hint="@string/email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:imeOptions="actionNext"/>

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_login_til"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="26dp"
                android:hint="@string/password"
                app:endIconMode="password_toggle"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                app:hintTextColor="@color/black"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:maxLines="1"
                    android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>


            <com.example.pic.view.custom.CustomButton
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:buttonText="@string/login"
                android:layout_marginTop="24dp"
                app:type="primary"
                app:buttonStyleType="contained"/>

        </LinearLayout>


    </RelativeLayout>
</layout>