<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="detail"
            type="com.example.pic.model.ImageDetails" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.fragments.DetailsFeedFragment">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.cardview.widget.CardView
                android:id="@+id/card_details_img"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="16dp"
                android:layout_margin="8dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="450dp">
                    <com.elyeproj.loaderviewlibrary.LoaderImageView
                        android:id="@+id/regular_img_details"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="fitXY"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_alignParentBottom="true">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/profile_image"
                            android:layout_width="96dp"
                            android:layout_height="96dp"
                            app:civ_border_width="2dp"
                            android:layout_margin="16dp"
                            app:civ_border_color="@color/white"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:gravity="center_vertical"
                            android:text="@{detail.user.username}"
                            android:textColor="@color/white"
                            android:fontFamily="@font/yekan_bold"
                            android:textSize="24sp"/>

                    </LinearLayout>




                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/card_details_img"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/dark_600"
                    android:text="@string/likes"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/dark_600"
                    android:text="@string/downloads"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/dark_600"
                    android:text="@string/publish_date"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/dark_600"
                    android:text="@string/camera"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@id/card_details_img"
                android:layout_margin="16dp"
                android:gravity="right"
                android:orientation="vertical"
                tools:ignore="RtlHardcoded">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:layout_gravity="right"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/black"
                    android:text="@{Integer.toString(detail.likes)}"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/black"
                    android:text="@{detail.downloads}"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/black"
                    android:text="@{detail.created_at}"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/black"
                    android:text="@{detail.exif.name}"/>


            </LinearLayout>
        </RelativeLayout>


    </androidx.core.widget.NestedScrollView>
</layout>