<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:fitsSystemWindows="true"
        tools:context=".view.fragments.SearchFragment">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/email_login_til"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:layout_marginTop="16dp"
                    android:hint="@string/search_text">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:imeOptions="actionNext"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        app:layout_scrollFlags="scroll|enterAlways" />

                </com.google.android.material.textfield.TextInputLayout>

            </com.google.android.material.appbar.CollapsingToolbarLayout>



            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tab_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@android:color/transparent"
                app:tabBackground="@android:color/transparent"
                app:tabGravity="fill"
                app:tabIndicator="@drawable/shape_round_corner"
                app:tabIndicatorColor="@color/secondary_500"
                app:tabIndicatorFullWidth="false"

                app:tabIndicatorGravity="bottom"
                app:tabIndicatorHeight="8dp"
                app:tabRippleColor="@android:color/transparent"
                app:tabSelectedTextColor="@color/black"
                app:tabTextAppearance="@style/TextAppearance.AppCompat.Subhead"
                app:tabTextColor="@color/dark_400">

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/tab_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:text="@string/photos" />

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/tab_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:text="@string/users" />

            </com.google.android.material.tabs.TabLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/dark_100" />


            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:scrollbars="none"
                android:scrollingCache="true"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/search_rcv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </androidx.core.widget.NestedScrollView>


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</layout>